# 3rd_Paper_Proof_of_concept

./: AssetTransportSolver.h  CMakeLists.txt  OriginalProblemSolver.h  Readme.txt  main.cpp  transportSimplex.h
Info/: .Transportation_simplex_algorithm.pdf.icloud
Instance Generator/: geral_instancias_proof_of_concept_random_c++.R
cmake/: FindCplex.cmake
